# Giscord

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: DRPC.cpp  DRPC.h  Giscord.cpp  GmodProcInfo.cpp  GmodProcInfo.h  utils.cpp  utils.h
